--- a/vercel.json
+++ b/vercel.json
@@ -3,13 +3,29 @@
     "builds": [
         {
             "src": "run.py",
-            "use": "@vercel/python"
+            "use": "@vercel/python",
+            "config": {
+                "maxLambdaSize": "15mb",
+                "runtime": "python3.9"
+            }
+        },
+        {
+            "src": "app/static/**",
+            "use": "@vercel/static"
         }
     ],
     "routes": [
         {
+            "src": "/static/(.*)",
+            "dest": "app/static/$1"
+        },
+        {
             "src": "/(.*)",
             "dest": "run.py"
         }
-    ]
+    ],
+    "env": {
+        "FLASK_APP": "run.py",
+        "FLASK_ENV": "production"
+    }
 } 
