--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
     "version": 2,
     "builds": [
         {
-            "src": "run.py",
+            "src": "api/index.py",
             "use": "@vercel/python",
             "config": {
                 "maxLambdaSize": "15mb",
@@ -17,15 +17,15 @@
     "routes": [
         {
             "src": "/static/(.*)",
-            "dest": "app/static/$1"
+            "dest": "/app/static/$1"
         },
         {
             "src": "/(.*)",
-            "dest": "run.py"
+            "dest": "/api/index.py"
         }
     ],
     "env": {
-        "FLASK_APP": "run.py",
+        "FLASK_APP": "api/index.py",
         "FLASK_ENV": "production"
     }
 } 
